# esotd

./: .gitignore  LICENSE  README.md  esotd.cabal  flake.nix  stack.yaml
.github/workflows/: presubmit-cabal.yaml  presubmit-stack.yaml  release.yaml  scorecards.yaml
exe/: Args.hs  Main.hs  Plot.hs
src/: ExponentialSum.hs
