cabal-version: 3.6
name: esotd
version: 0.1.0.0
synopsis: Exponential sum of the day
description: Simple package to compute and plot the exponential sum given by the current day.
homepage: https://mihai.page  -- TODO: write article about the generator
license: ISC
license-file: LICENSE.md
author: Mihai Maruseac
maintainer: mihai.maruseac@gmail.com
copyright: © 2018 Mihai Maruseac
category: Math, Images
build-type: Simple
stability: alpha (experimental)
extra-doc-files: README.md, CHANGELOG.md
bug-reports: https://github.com/mihaimaruseac/eotd/issues

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/mihaimaruseac/eotd

library esotd-lib
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    src
  exposed-modules:   ExponentialSum
  build-depends:     base >= 4.8 && < 5

executable esotd
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    exe
  main-is:           Main.hs
  other-modules:     Args
                   , Plot
  build-depends:     base >= 4.8 && < 5
                   , diagrams-lib
                   , diagrams-rasterific
                   , esotd-lib
                   , optparse-applicative

test-suite doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    test/doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , Glob
                   , QuickCheck
                   , doctest
                   , esotd-lib
