cabal-version: 3.6
name: esotd
version: 0.1.0.0
synopsis: Exponential sum of the day
description: Simple package to compute and plot the exponential sum given by the current day.
homepage: https://mihai.page  -- TODO: write article about the generator
license: ISC
license-file: LICENSE
author: Mihai Maruseac
maintainer: mihai.maruseac@gmail.com
copyright: © 2018 Mihai Maruseac
category: Math, Images
build-type: Simple
stability: alpha (experimental)
bug-reports: https://github.com/mihaimaruseac/eotd/issues

extra-doc-files:
  README.md

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/mihaimaruseac/eotd

common compile-options
  ghc-options: -O2 -threaded -Wall -Wcompat

library esotd-lib
  import: compile-options
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: ExponentialSum
  build-depends: base >= 4.8 && < 5

executable esotd
  import: compile-options
  hs-source-dirs: exe
  main-is: Main.hs
  default-language: Haskell2010
  other-modules:
    , Args
    , Plot
  build-depends:
    , base >= 4.8 && < 5
    , diagrams-lib ^>= 1.5
    , diagrams-rasterific ^>= 1.5
    , esotd:esotd-lib
    , optparse-applicative ^>= 0.19

test-suite doctest
  import: compile-options
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test/doctest
  main-is: Main.hs
  build-depends:
    , base >= 4.8 && < 5
    , Glob ^>= 0.10.2
    , QuickCheck ^>= 2.17.1
    , doctest ^>= 0.24.2
    , esotd:esotd-lib
